Returning null instead of throwing ArrayIndexOutOfBound for sequence[invalidIndex]. This simplifies the usage in bindings and fixes JFXC-1320.