@@ -94,18 +94,9 @@ public class IntegerSequenceTest extends JavaFXTestCase {
         assertTrue(Sequences.isEqual(seq, null));
         assertTrue(Sequences.isEqual(null, seq));
         assertEquals(0, seq.hashCode());
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    seq.get(-1);
-                } });
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    seq.get(0);
-                } });
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    seq.get(1);
-                } });
+        assertEquals((Integer)null, seq.get(-1));
+        assertEquals((Integer)null, seq.get(0));
+        assertEquals((Integer)null, seq.get(1));
         assertEquals("[ ]", seq.toString());
         assertEquals(seq, EMPTY_SEQUENCE);
         assertEquals(seq, seq.get(nullMatcher));
@@ -124,15 +115,9 @@ public class IntegerSequenceTest extends JavaFXTestCase {
         assertEquals(seq, seq);
         assertEquals(value, seq.hashCode());
         assertEquals("[ " + value + " ]", seq.toString());
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    seq.get(-1);
-                } });
-        assertEquals(new Integer(value), seq.get(0));
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    seq.get(1);
-                } });
+        assertEquals((Integer)null, seq.get(-1));
+        assertEquals(Integer.valueOf(value), seq.get(0));
+        assertEquals((Integer)null, seq.get(1));
         assertEmpty(seq.get(nullMatcher));
         assertEquals(seq, seq.get(firstMatcher));
         assertEquals(seq, seq.get(lastMatcher));
@@ -149,16 +134,10 @@ public class IntegerSequenceTest extends JavaFXTestCase {
         assertEquals(seq, seq);
         assertEquals(seq, new ArraySequence<Integer>(Integer.class, seq.get(0), seq.get(1)));
         assertEquals("[ " + a + ", " + b + " ]", seq.toString());
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    seq.get(-1);
-                } });
+        assertEquals((Integer)null, seq.get(-1));
         assertEquals(a, seq.get(0));
         assertEquals(b, seq.get(1));
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    seq.get(2);
-                } });
+        assertEquals((Integer)null, seq.get(2));
         assertEmpty(seq.get(nullMatcher));
         assertEquals(seq, seq.get(allMatcher));
         assertOneElement(seq.get(firstMatcher), a);
@@ -484,19 +463,10 @@ public class IntegerSequenceTest extends JavaFXTestCase {
      * Test out-of-bounds sets and gets
      */
     public void testOutOfBounds() {
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    EMPTY_SEQUENCE.get(-1);
-                } });
+        assertEquals((Integer)null, EMPTY_SEQUENCE.get(-1));
         assertEquals(Sequences.set(EMPTY_SEQUENCE, 0, 1), EMPTY_SEQUENCE);
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    TWO_SEQUENCE.get(-1);
-                } });
-        assertThrows(IndexOutOfBoundsException.class,
-                new VoidCallable() { public void call() throws Exception {
-                    TWO_SEQUENCE.get(100);
-                } });
+        assertEquals((Integer)null, TWO_SEQUENCE.get(-1));
+        assertEquals((Integer)null, TWO_SEQUENCE.get(100));
         assertEquals(Sequences.set(TWO_SEQUENCE, -1, 400), TWO_SEQUENCE);
         assertEquals(Sequences.set(TWO_SEQUENCE, 200, 400), TWO_SEQUENCE);
     }
